# desksort

./: package.json
desksort/: .gitignore  README.md  package-lock.json  package.json
desksort/src/: index.html  main.js  settings.html  styles.css
desksort/src-tauri/: Cargo.toml  tauri.conf.json
desksort/src-tauri/src/: lib.rs  main.rs
