[package]
name = "desksort"
version = "0.1.0"
description = "A desktop file organizer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"] 
